--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Mergaite</title>
 </head>
 
-<body>
+<body style="background-color: white;">
    <header>
-        <img src="#" alt="Logo">
+        <img src="logo.png" alt="Logo">
         <nav>
             <a href="">Home</a>
             <a href="">Tracks</a>
@@ -23,7 +23,7 @@
             <h1>404</h1>
             <p>The link is broken or the page has been moved</p>
         </div>
-            <img src="#" alt="sad face with a girl">
+            <img src="girl-with-sad-face.png" alt="sad face with a girl">
     </main>
 </body>
 
