--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body style="background-color: white;">
    <header>
-        <img src="logo.png" alt="Logo">
-        <nav>
+        <img src="/img/logo.png" alt="Logo">
+        <nav style="text-align: right; margin-right: 5%;">
             <a href="">Home</a>
             <a href="">Tracks</a>
             <a href="">Library</a>
@@ -22,8 +22,8 @@
         <div>
             <h1>404</h1>
             <p>The link is broken or the page has been moved</p>
-        </div>
-            <img src="girl-with-sad-face.png" alt="sad face with a girl">
+        </div >
+            <img src="/img/girl-with-sad-face.png" alt="sad face with a girl">
     </main>
 </body>
 
