--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mergaite</title>
-</head>
+    <link rel="stylesheet" href="./CSS/main.css">
+  </head>
 
-<body style="background-color: white;">
+<body>
    <header>
-        <img src="/img/logo.png" alt="Logo">
-        <nav style="text-align: right; margin-right: 5%;">
-            <a href="">Home</a>
-            <a href="">Tracks</a>
-            <a href="">Library</a>
-            <a href="">Community</a>
-            <a href="">Sign in</a>
+        <img src="./img/logo.png" alt="Logo">
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Tracks</a>
+            <a href="#">Library</a>
+            <a href="#">Community</a>
+            <a href="#">Sign in</a>
         </nav>
    </header>
    <main>
@@ -23,7 +24,7 @@
             <h1>404</h1>
             <p>The link is broken or the page has been moved</p>
         </div >
-            <img src="/img/girl-with-sad-face.png" alt="sad face with a girl">
+            <img src="./img/girl-with-sad-face.png" alt="sad face with a girl">
     </main>
 </body>
 
